// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils getVaultHarvestsOnChain returns vaults harvests with apr 1`] = `
Array [
  Object {
    "amount": 0.004992355665779731,
    "block": 13612910,
    "estimatedApr": 0.01,
    "eventType": "Harvest",
    "strategyBalance": 2481.941296192305,
    "timestamp": 1636878824,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.01741109755651847,
    "block": 13647172,
    "estimatedApr": 0.06,
    "eventType": "Harvest",
    "strategyBalance": 2366.0613517200886,
    "timestamp": 1637346968,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.02354000454094577,
    "block": 13674352,
    "estimatedApr": 0.09,
    "eventType": "Harvest",
    "strategyBalance": 2314.0426476124358,
    "timestamp": 1637717848,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.014972638754161653,
    "block": 13699647,
    "estimatedApr": 0.01,
    "eventType": "Harvest",
    "strategyBalance": 2300.047794001301,
    "timestamp": 1638065247,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.036611569490331085,
    "block": 13844434,
    "estimatedApr": 0.15,
    "eventType": "Harvest",
    "strategyBalance": 2285.8514972932135,
    "timestamp": 1640034477,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0,
    "block": 13870247,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 2257.6472384811345,
    "timestamp": 1640380383,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.013538827735603299,
    "block": 13896464,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 2255.6396126895474,
    "timestamp": 1640731025,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 84.17266705379542,
    "block": 13612910,
    "estimatedApr": 228.46,
    "eventType": "TreeDistribution",
    "strategyBalance": 2481.941296192305,
    "timestamp": 1636878824,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  },
  Object {
    "amount": 24.235735970268347,
    "block": 13612910,
    "estimatedApr": 65.78,
    "eventType": "TreeDistribution",
    "strategyBalance": 2481.941296192305,
    "timestamp": 1636878824,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 142.7150262817037,
    "block": 13647172,
    "estimatedApr": 512.88,
    "eventType": "TreeDistribution",
    "strategyBalance": 2366.0613517200886,
    "timestamp": 1637346968,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 725.4052573992801,
    "block": 13674352,
    "estimatedApr": 2845.69,
    "eventType": "TreeDistribution",
    "strategyBalance": 2314.0426476124358,
    "timestamp": 1637717848,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  },
  Object {
    "amount": 62.74553463488707,
    "block": 13674352,
    "estimatedApr": 246.14,
    "eventType": "TreeDistribution",
    "strategyBalance": 2314.0426476124358,
    "timestamp": 1637717848,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 109.38092107509485,
    "block": 13699647,
    "estimatedApr": 76.16,
    "eventType": "TreeDistribution",
    "strategyBalance": 2300.047794001301,
    "timestamp": 1638065247,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 895.551949222039,
    "block": 13844434,
    "estimatedApr": 3571.83,
    "eventType": "TreeDistribution",
    "strategyBalance": 2285.8514972932135,
    "timestamp": 1640034477,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  },
  Object {
    "amount": 113.37673517546946,
    "block": 13844434,
    "estimatedApr": 452.19,
    "eventType": "TreeDistribution",
    "strategyBalance": 2285.8514972932135,
    "timestamp": 1640034477,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 50.123260504732386,
    "block": 13896464,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 2255.6396126895474,
    "timestamp": 1640731025,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
]
`;

exports[`vaults.utils getVaultPerformance no rewards or harvests returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 74.23705993472916,
    "boostable": false,
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non compatible network vault performances returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_compound",
    "apr": 74.23705993472916,
    "boostable": false,
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non standard vault performance returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 74.23705993472916,
    "boostable": false,
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance returns value sources from standard methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 1.9605714285714286,
    "boostable": false,
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1.9791654594512487,
    "boostable": false,
    "maxApr": 1.9791654594512487,
    "minApr": 1.9791654594512487,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bCVXCRV_emission",
    "apr": 0.000004975832417583712,
    "boostable": false,
    "maxApr": 0.000004975832417583712,
    "minApr": 0.000004975832417583712,
    "name": "bCVXCRV Rewards",
    "type": "flat_bCVXCRV_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bcvxcrv_compounding",
    "apr": 2.5320518074012263e-7,
    "boostable": false,
    "maxApr": 2.5320518074012263e-7,
    "minApr": 2.5320518074012263e-7,
    "name": "bCVXCRV Compounding",
    "type": "derivative_bcvxcrv_compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bVECVX_emission",
    "apr": 0.000022426642857150473,
    "boostable": false,
    "maxApr": 0.000022426642857150473,
    "minApr": 0.000022426642857150473,
    "name": "bVECVX Rewards",
    "type": "flat_bVECVX_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bvecvx_compounding",
    "apr": 0.000001141224351973436,
    "boostable": false,
    "maxApr": 0.000001141224351973436,
    "minApr": 0.000001141224351973436,
    "name": "bVECVX Compounding",
    "type": "derivative_bvecvx_compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance skips all emitted tokens with no price 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 1.9605714285714286,
    "boostable": false,
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1.9791654594512487,
    "boostable": false,
    "maxApr": 1.9791654594512487,
    "minApr": 1.9791654594512487,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;
